--- a/index.html
+++ b/index.html
@@ -1,23 +1,255 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>EasyFolio</title>
-         <link rel="stylesheet" href="./public/css/app.css">
-    </head>
-    <body>
-   <!--Header-->
-   <!--Hero-section-->
-   <!--About-->
-   <!--Resume-->
-   <!--Portfolio-->
-   <!--Testimonials-->
-   <!--Services-->
-   <!--Q&A-->
-   <!--Dropdown-->
-   <!--contact-->
-   <!--Footer-->
-   
-    </body>
-    </html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EasyFolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Questrial&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./public/css/app.css">
+</head>
+
+<body>
+    <!--Header-->
+    <header class="py-4 position-fixed bg-surface">
+        <div
+            class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between bg-surface rounded-5 py-1 px-5">
+            <a class="navbar-brand pe-20 d-flex align-items-center " href="index.html">
+                <h1 class="sitename text-heading fw-light">EasyFolio</h1>
+            </a>
+            <input id="menu" type="checkbox">
+            <nav class="navbar navbar-expand-lg bg-surface d-flex flex-column flex-lg-row gap-4">
+                <label class="close" for="menu"><i class="bi bi-x-lg"></i></label>
+                <ul class="navbar-nav bg-transparent my-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-active" aria-current="page" href="#Home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-default" href="#About">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-default" href="#">Resume</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-default" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-default" href="#">Services</a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link text-default dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item text-default" href="#">Dropdown1</a>
+                            <a class="dropdown-item text-default" href="#">dropdown2</a>
+                            <a class="dropdown-item text-default" href="#">dropdown3</a>
+                            <a class="dropdown-item text-default" href="#">dropdown4</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-default" href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="header-social-links d-flex justify-content-evenly gap-2">
+                <a href="#" class="twitter text-nav-icons"><i class="bi bi-twitter-x"></i></a>
+                <a href="#" class="facebook text-nav-icons"><i class="bi bi-facebook"></i></a>
+                <a href="#" class="instagram text-nav-icons"><i class="bi bi-instagram"></i></a>
+                <a href="#" class="linkedin text-nav-icons"><i class="bi bi-linkedin"></i></a>
+            </div>
+            <label class="open" for="menu"><i class="bi bi-list"></i></label>
+
+        </div>
+    </header>
+    <!--Hero-section-->
+    <div class="hero-section container d-flex flex-lg-row flex-column py-10 justify-content-lg-between ju  align-items-center"
+        id="Home">
+        <div
+            class="hero-left d-flex flex-column align-items-center justify-content-center justify-content-lg-start gap-2 align-items-lg-start gap-4">
+            <h2 class="fw-bold text-heading text-lg-start text-center">Crafting Digital Experiences with Passion</h2>
+            <p class="text-default fw-light text-lg-start text-center">Transforming ideas into elegant solutions through
+                creative design and innovative development</p>
+            <div class="my-btn d-flex flex-column flex-lg-row gap-2">
+                <button class="bg-accent py-2 px-5 border-0 rounded-5 text-surface fw-bold">View My Work</button>
+                <button class="bg-transparent py-2 px-5 border-1 border-accent rounded-5 text-accent fw-bold">Let's
+                    Connect</button>
+            </div>
+            <div class="statistic d-flex flex-column align-items-lg-start align-items-center flex-lg-row gap-8">
+                <div class="d-flex flex-column align-items-lg-start align-items-center">
+                    <span class="text-heading fs-3 fw-bold text-center text-lg-start">5+</span>
+                    <span class="fw-light text-center text-lg-start">Years Experience</span>
+                </div>
+                <div class="d-flex flex-column  align-items-lg-start align-items-center">
+                    <span class="text-heading fs-3 fw-bold text-center text-lg-start">100+</span>
+                    <span class="fw-light text-center text-lg-start">Project Completed</span>
+                </div>
+                <div class="d-flex flex-column  align-items-lg-start align-items-center">
+                    <span class="text-heading fs-3 fw-bold text-center text-lg-start">50+</span>
+                    <span class="fw-light text-center text-lg-start">Happy Clients</span>
+                </div>
+            </div>
+        </div>
+        <div class="hero-right py-6 px-6 d-flex ">
+            <img src="public/images/assets/img/profile/profile-1.webp" alt="Portfolio Hero Image"
+                class="img-fluid aos-init aos-animate" data-aos="zoom-out" data-aos-delay="300">
+        </div>
+    </div>
+    <!--About-->
+    <div id="About" class="about bg-bg-2">
+        <div class="container about-title d-flex flex-column align-items-center ">
+            <h2 class="text-heading2 text-center">About</h2>
+            <svg viewBox="0 0 200 20" xmlns="http://www.w3.org/2000/svg">
+                <path d="M 0,10 C 40,0 60,20 100,10 C 140,0 160,20 200,10" fill="none" stroke="currentColor"
+                    stroke-width="2"></path>
+            </svg>
+            <p class="text-default text-center w-50">Quis autem vel eum iure reprehenderit qui in ea voluptate velit
+                esse quam nihil molestiae consequatur vel
+                illum qui dolorem</p>
+            <div class="about-content d-flex flex-column flex-lg-row justify-content-lg-between gap-8 pt-lg-0 pt-8">
+                <div class="left-about d-flex w-50 py-lg-5 align-items-center">
+                    <img class="rounded-4 w-100"
+                        src="public/images/assets/img/profile/profile-square-2.webp" alt="">
+                </div>
+                <div class="right-about w-50 p-lg-8 d-flex flex-column gap-2">
+                    <span class="subtitle text-accent fw-bold">About Me</span>
+
+                    <h2 class="text-heading">UI/UX Designer &amp; Web Developer</h2>
+
+                    <p class="text-default fw-light">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                        aut fugit, sed
+                        quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+
+                    <p class="tesxt-defaul">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</p>
+
+                    <div class="personal-info">
+                        <div class="row g-4 bg-bg-1 rounded-5 p-5">
+                            <div class="col-6">
+                                <div class="info-item d-flex flex-column align-items-lg-start gap-2">
+                                    <span class="fw-light">Name</span>
+                                    <span class="text-heading fw-bold">Eliot Johnson</span>
+                                </div>
+                            </div>
+
+                            <div class="col-6">
+                                <div class="info-item d-flex flex-column align-items-lg-start gap-2">
+                                    <span class="fw-light">Phone</span>
+                                    <span class="text-heading fw-bold">+123 456 7890</span>
+                                </div>
+                            </div>
+
+                            <div class="col-6">
+                                <div class="info-item d-flex flex-column align-items-lg-start gap-2">
+                                    <span class="fw-light">Age</span>
+                                    <span class="text-heading fw-bold">26 Years</span>
+                                </div>
+                            </div>
+
+                            <div class="col-6">
+                                <div class="info-item d-flex flex-column align-items-lg-start gap-2">
+                                    <span class="fw-light">Email</span>
+                                    <span class="text-heading fw-bold">email@example.com</span>
+                                </div>
+                            </div>
+
+                            <div class="col-6">
+                                <div class="info-item d-flex flex-column align-items-lg-start gap-2">
+                                    <span class="fw-light">Occupation</span>
+                                    <span class="text-heading fw-bold">Lorem Engineer</span>
+                                </div>
+                            </div>
+
+                            <div class="col-6">
+                                <div class="info-item d-flex flex-column align-items-lg-start gap-2">
+                                    <span class="fw-light">Nationality</span>
+                                    <span class="text-heading fw-bold">Ipsum</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="signature d-flex align-items-center gap-4">
+                        <div class="signature-image">
+                            <img width="150" src="public/images/assets/img/misc/signature-1.webp" alt=""
+                                class="img-fluid">
+                        </div>
+                        <div class="signature-info">
+                            <h4 class="text-heading">Eliot Johnson</h4>
+                            <p class="text-default fw-light">Adipiscing Elit, Lorem Ipsum</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Skills-->
+    <div class="skills container py-10">
+        <div class="row g-4">
+            <div class="col-md-6 col-lg-3">
+                <div class="skill-box rounded-3 p-4">
+                    <h3 class="text-heading fw-bold">HTML</h3>
+                    <p class="text-default fw-light">Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+                    <span class="text-end d-block">90%</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-label="Basic example" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="skill-box rounded-3 p-4">
+                    <h3 class="text-heading fw-bold">CSS</h3>
+                    <p class="text-default fw-light">Nemo enim ipsam voluptatem quia voluptas sit aspernatur.</p>
+                    <span class="text-end d-block">90%</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-label="Basic example" aria-valuenow="95"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="skill-box rounded-3 p-4">
+                    <h3 class="text-heading fw-bold">JavaScript</h3>
+                    <p class="text-default fw-light">Neque porro quisquam est qui dolorem ipsum quia dolor.</p>
+                    <span class="text-end d-block">80%</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-label="Basic example" aria-valuenow="80"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="skill-box rounded-3 p-4">
+                    <h3 class="text-heading fw-bold">Photoshop</h3>
+                    <p class="text-default fw-light">Quis autem vel eum iure reprehenderit qui in ea voluptate.</p>
+                    <span class="text-end d-block">55%</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-label="Basic example" aria-valuenow="55"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 55%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Resume-->
+    <!--Portfolio-->
+    <!--Testimonials-->
+    <!--Services-->
+    <!--Q&A-->
+    <!--Dropdown-->
+    <!--contact-->
+    <!--Footer-->
+
+</body>
+
+</html>
