--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
                 illum qui dolorem</p>
             <div class="about-content d-flex flex-column flex-lg-row justify-content-lg-between gap-8 pt-lg-0 pt-8">
                 <div class="left-about d-flex w-50 py-lg-5 align-items-center">
-                    <img class="rounded-4 w-100"
-                        src="public/images/assets/img/profile/profile-square-2.webp" alt="">
+                    <img class="rounded-4 w-100" src="public/images/assets/img/profile/profile-square-2.webp" alt="">
                 </div>
                 <div class="right-about w-50 p-lg-8 d-flex flex-column gap-2">
                     <span class="subtitle text-accent fw-bold">About Me</span>
@@ -242,14 +241,159 @@
         </div>
     </div>
     <!--Resume-->
+
     <!--Portfolio-->
     <!--Testimonials-->
+    <div id="Testimonials" class="testimonials bg-bg-2">
+        <div class="container testimonials-title d-flex flex-column align-items-center">
+            <h2 class="text-heading2 text-center">Testimonials</h2>
+            <svg viewBox="0 0 200 20" xmlns="http://www.w3.org/2000/svg">
+                <path d="M 0,10 C 40,0 60,20 100,10 C 140,0 160,20 200,10" fill="none" stroke="currentColor"
+                    stroke-width="2"></path>
+            </svg>
+            <p class="text-default text-center w-lg-50">Quis autem vel eum iure reprehenderit qui in ea voluptate velit
+                esse quam nihil molestiae consequatur vel
+                illum qui dolorem</p>
+        </div>
+        <div class="testimonials-content p-lg-10 p-3">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="carousel-content bg-bg-1 p-lg-8 p-4 container rounded-5 d-flex flex-lg-row flex-column gap-10">
+                            <div class="left-carousel d-flex flex-column gap-3 justify-content-lg-start ">
+                                <h2 class="text-heading fw-bold">Sed ut perspiciatis unde omnis</h2>
+                                <p>
+                                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit
+                                    rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam,
+                                    risus at semper.
+                                </p>
+                                <p>
+                                    Beatae magnam dolore quia ipsum. Voluptatem totam et qui dolore dignissimos. Amet
+                                    quia sapiente laudantium nihil illo et assumenda sit cupiditate. Nam perspiciatis
+                                    perferendis minus consequatur. Enim ut eos quo.
+                                </p>
+                                <div class="profile d-flex align-items-center gap-4">
+                                    <img src="public/images/assets/img/person/person-m-7.webp" class="profile-i" alt="">
+                                    <div class="profile-info d-flex flex-column">
+                                        <h3 class="text-heading fw-bold mb-0">Saul Goodman</h3>
+                                        <span>Client</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-carousel">
+                                <img src="./public/images/assets/img/person/person-m-7.webp"
+                                    class="d-block w-100 rounded-4" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-content bg-bg-1 p-lg-8 p-4 container rounded-5 d-flex flex-column flex-lg-row gap-10">
+                             <div class="left-carousel d-flex flex-column gap-3 justify-content-lg-start">
+                                <h2 class="text-heading fw-bold">Sed ut perspiciatis unde omnis</h2>
+                                <p>
+                                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit
+                                    rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam,
+                                    risus at semper.
+                                </p>
+                                <p>
+                                    Beatae magnam dolore quia ipsum. Voluptatem totam et qui dolore dignissimos. Amet
+                                    quia sapiente laudantium nihil illo et assumenda sit cupiditate. Nam perspiciatis
+                                    perferendis minus consequatur. Enim ut eos quo.
+                                </p>
+                                <div class="profile d-flex align-items-center gap-4">
+                                    <img src="public/images/assets/img/person/person-f-8.webp" class="profile-i" alt="">
+                                    <div class="profile-info d-flex flex-column">
+                                        <h3 class="text-heading fw-bold mb-0">Saul Goodman</h3>
+                                        <span>Client</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-carousel">
+                                <img src="./public/images/assets/img/person/person-f-8.webp"
+                                    class="d-block w-100 rounded-4" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-content bg-bg-1 p-lg-8 p-4 container rounded-5 d-flex flex-column flex-lg-row gap-10">
+                             <div class="left-carousel d-flex flex-column gap-3 justify-content-lg-start">
+                                <h2 class="text-heading fw-bold">Sed ut perspiciatis unde omnis</h2>
+                                <p>
+                                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit
+                                    rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam,
+                                    risus at semper.
+                                </p>
+                                <p>
+                                    Beatae magnam dolore quia ipsum. Voluptatem totam et qui dolore dignissimos. Amet
+                                    quia sapiente laudantium nihil illo et assumenda sit cupiditate. Nam perspiciatis
+                                    perferendis minus consequatur. Enim ut eos quo.
+                                </p>
+                                <div class="profile d-flex align-items-center gap-4">
+                                    <img src="public/images/assets/img/person/person-m-9.webp" class="profile-i" alt="">
+                                    <div class="profile-info d-flex flex-column">
+                                        <h3 class="text-heading fw-bold mb-0">Saul Goodman</h3>
+                                        <span>Client</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-carousel">
+                                <img src="./public/images/assets/img/person/person-m-9.webp"
+                                    class="d-block w-100 rounded-4" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-content bg-bg-1 p-lg-8  container rounded-5 d-flex flex-column flex-lg-row gap-10">
+                             <div class="left-carousel d-flex flex-column gap-3 justify-content-lg-start">
+                                <h2 class="text-heading fw-bold">Sed ut perspiciatis unde omnis</h2>
+                                <p>
+                                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit
+                                    rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam,
+                                    risus at semper.
+                                </p>
+                                <p>
+                                    Beatae magnam dolore quia ipsum. Voluptatem totam et qui dolore dignissimos. Amet
+                                    quia sapiente laudantium nihil illo et assumenda sit cupiditate. Nam perspiciatis
+                                    perferendis minus consequatur. Enim ut eos quo.
+                                </p>
+                                <div class="profile d-flex align-items-center gap-4">
+                                    <img src="public/images/assets/img/person/person-f-10.webp" class="profile-i"
+                                        alt="">
+                                    <div class="profile-info d-flex flex-column">
+                                        <h3 class="text-heading fw-bold mb-0">Saul Goodman</h3>
+                                        <span>Client</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-carousel">
+                                <img src="./public/images/assets/img/person/person-f-10.webp"
+                                    class="d-block w-100 rounded-4" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="carousel-control align-items-center justify-content-center gap-2 d-flex ">
+                <button class="bg-bg-1 border-0 rounded-circle p-1" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <i class="bi bi-chevron-left fs-4"></i>
+                </button>
+                <button class="bg-bg-1 border-0 rounded-circle p-1" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <i class="bi bi-chevron-right fs-4"></i>
+                </button>
+            </div>
+            
+        </div>
+
+    </div>
     <!--Services-->
     <!--Q&A-->
     <!--Dropdown-->
     <!--contact-->
     <!--Footer-->
-
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
