Contact+footer(with respo)

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="hero-section container d-flex flex-lg-row flex-column py-10 justify-content-lg-between ju  align-items-center"
         id="Home">
         <div
-            class="hero-left d-flex flex-column align-items-center justify-content-center justify-content-lg-start gap-2 align-items-lg-start gap-4">
+            class="hero-left d-flex flex-column align-items-center justify-content-center justify-content-lg-start gapx-2 py-1 align-items-lg-start gap-4">
             <h2 class="fw-bold text-heading text-lg-start text-center">Crafting Digital Experiences with Passion</h2>
             <p class="text-default fw-light text-lg-start text-center">Transforming ideas into elegant solutions through
                 creative design and innovative development</p>
@@ -241,7 +241,6 @@
         </div>
     </div>
     <!--Resume-->
-
     <!--Portfolio-->
     <!--Testimonials-->
     <div id="Testimonials" class="testimonials bg-bg-2">
@@ -389,10 +388,60 @@
 
     </div>
     <!--Services-->
+
     <!--Q&A-->
+    
     <!--Dropdown-->
     <!--contact-->
+    <div class="contact ">
+        <div class="contact-left">
+            <div class="title">Contact</div>
+            <h2>Nemo enim ipsam voluptatem quia voluptas aspernatur</h2>
+            <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.</p>
+            <div class="contact-info">
+                <div>
+                    <i class="bi bi-envelope-at me-3"></i>
+                    <span>info@example.com</span>
+                </div>
+                <div>
+                    <i class="bi bi-telephone me-3"></i>
+                    <span>+1 5589 55488 558</span>
+                </div>
+                <div>
+                    <i class="bi bi-geo-alt me-3"></i>
+                    <span>A108 Adam Street, New York, NY 535022</span>
+                </div>
+                <a href="#" class="map-link d-inline-flex align-items-center">
+                    Open Map
+                    <i class="bi bi-arrow-right ms-2"></i>
+                  </a>
+            </div>
+        </div>
+        <div class="contact-right">
+            <div class="message">
+                <div><input type="text" placeholder="Your Name"></div>
+                <div><input type="email" placeholder="Your Email"></div>
+                <div><input type="text" placeholder="Subject"></div>
+                <div> <textarea name="text" placeholder="Message"></textarea></div>
+                <div><button type="submit" class="">Submit Message</button></div>
+            </div>
+        </div>
+    </div>
     <!--Footer-->
+    <footer class="d-flex flex-column align-items-center gap-2 p-8">
+        <div class="copyright text-center">
+            <p>© <span>Copyright</span> <strong class="px-1">EasyFolio</strong> <span>All Rights Reserved</span></p>
+        </div>
+        <div class="social-links d-flex justify-content-center gap-2">
+            <a class="text-nav-icons px-2 py-1 d-flex align-items-center" href=""><i class="bi bi-twitter-x"></i></a>
+            <a class="text-nav-icons px-2 py-1 d-flex align-items-center" href=""><i class="bi bi-facebook"></i></a>
+            <a class="text-nav-icons px-2 py-1 d-flex align-items-center" href=""><i class="bi bi-instagram"></i></a>
+            <a class="text-nav-icons px-2 py-1 d-flex align-items-center" href=""><i class="bi bi-linkedin"></i></a>
+        </div>
+        <div class="credits">
+            Designed by <a class="text-decoration-none text-accent" href="https://bootstrapmade.com/">BootstrapMade</a>
+        </div>
+    </footer>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
