btn back to top

--- a/index.html
+++ b/index.html
@@ -716,6 +716,10 @@
             Designed by <a class="text-decoration-none text-accent" href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
     </footer>
+    <!--back to top-->
+    <button id="btt">
+        <a href=""><i class="bi bi-arrow-up-short"></i></a>
+    </button>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
